[tool.poetry]
name = "agents"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Mesa = "~=0.8.9"

[tool.poetry.dev-dependencies]


[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
