[tool.poetry]
name = "candied"
version = "0.1.0"
description = "Candy-eating genetic algorithm agent model."
authors = ["Bartosz Biernacki", "Piotr Machura"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Mesa = "~=0.8.9"

[tool.poetry.dev-dependencies]


[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "invalid-name",
  "too-many-arguments",
  "too-many-instance-attributes",
  "too-many-locals",
]

[tool.poetry.scripts]
serve = "candied.server:server.launch()"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
